clusters/vollminlab-cluster/mediastack/overseerr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr-ingress
  namespace: mediastack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    shlink.vollminlab.com/slug: overseerr
  labels:
    app: overseerr
    env: production
    category: media
spec:
  ingressClassName: nginx
  rules:
    - host: overseerr.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
  tls:
    - hosts:
        - overseerr.vollminlab.com
      secretName: wildcard-tls
